add file loader

--- a/src/header/_header.scss
+++ b/src/header/_header.scss
@@ -53,10 +53,10 @@ $button-size:36px;
         }
         &--logout{
             margin-right:20px;
-            //background-image:url('./Header/ico_logout_30_white.svg');
+            background-image:url('./Header/ico_logout_30_white.svg');
         }
         &--backoffice{
-            //background-image:url('./Header/ico_backoffice_30_white.svg');
+            background-image:url('./Header/ico_backoffice_30_white.svg');
         }
     }
 }
